fix bug with index

--- a/day2_preprocessing/day2_preprocessing.ipynb
+++ b/day2_preprocessing/day2_preprocessing.ipynb
@@ -647,41 +647,41 @@
       "13              17\n",
       "19              16\n",
       "25              14\n",
+      "39              13\n",
       "14              13\n",
       "28              13\n",
-      "39              13\n",
       "16              10\n",
       "41               9\n",
+      "38               9\n",
       "22               9\n",
       "75               9\n",
-      "38               9\n",
       "66               6\n",
       "12               5\n",
-      "27               4\n",
-      "57               4\n",
+      "LINE             4\n",
       "20               4\n",
+      "65               4\n",
       "54               4\n",
       "32               4\n",
-      "65               4\n",
-      "LINE             4\n",
+      "27               4\n",
+      "57               4\n",
       "70               3\n",
-      "S.O./P.P. 3      2\n",
-      "48               2\n",
-      "95               2\n",
       "18               2\n",
       "45               2\n",
       "84               2\n",
-      "72               1\n",
+      "48               2\n",
+      "95               2\n",
+      "S.O./P.P. 3      2\n",
       "69               1\n",
+      "92               1\n",
+      "43               1\n",
       "40               1\n",
       "62               1\n",
-      "43               1\n",
-      "85               1\n",
-      "30               1\n",
-      "92               1\n",
-      "10               1\n",
-      "15               1\n",
       "55               1\n",
+      "30               1\n",
+      "15               1\n",
+      "72               1\n",
+      "10               1\n",
+      "85               1\n",
       "Name: Region, dtype: int64\n",
       "Activity\n",
       "805     43\n",
@@ -1193,8 +1193,8 @@
     {
      "data": {
       "text/plain": [
-       "1.0    602\n",
-       "0.0    255\n",
+       "1.0    597\n",
+       "0.0    260\n",
        "Name: Sport, dtype: int64"
       ]
      },
@@ -1281,7 +1281,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1293,7 +1293,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1326,8 +1326,8 @@
       "text/plain": [
        "   Id  Longevity  Education     Sex   Age  Pet  Children  Activity  Sport\n",
        "0   1          0          3  female  73.0    1         0       725    1.0\n",
-       "1   2          1          1    male  75.0    1         0      7128    1.0\n",
-       "2   3          1          3    male  73.0    0         0       793    0.0\n",
+       "1   2          1          1    male  75.0    1         0      7128    0.0\n",
+       "2   3          1          3    male  73.0    0         0       793    1.0\n",
        "3   4          1          1    male  74.0    1         0      5310    0.0\n",
        "4   5          0          3  female  74.0    0         0       805    1.0"
       ]
@@ -1401,7 +1401,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1412,7 +1412,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1443,8 +1443,8 @@
       "text/plain": [
        "   Longevity  Education     Sex   Age  Pet  Children  Activity  Sport\n",
        "0          0          3  female  73.0    1         0       725    1.0\n",
-       "1          1          1    male  75.0    1         0      7128    1.0\n",
-       "2          1          3    male  73.0    0         0       793    0.0\n",
+       "1          1          1    male  75.0    1         0      7128    0.0\n",
+       "2          1          3    male  73.0    0         0       793    1.0\n",
        "3          1          1    male  74.0    1         0      5310    0.0\n",
        "4          0          3  female  74.0    0         0       805    1.0"
       ]
@@ -1516,7 +1516,7 @@
        "      <td>male</td>\n",
        "      <td>75.0</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -1527,7 +1527,7 @@
        "      <td>male</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -1560,8 +1560,8 @@
       "text/plain": [
        "   Longevity  Education     Sex   Age  Activity  Sport  Family  IsAlone\n",
        "0          0          3  female  73.0       725    1.0       1      0.0\n",
-       "1          1          1    male  75.0      7128    1.0       1      0.0\n",
-       "2          1          3    male  73.0       793    0.0       0      1.0\n",
+       "1          1          1    male  75.0      7128    0.0       1      0.0\n",
+       "2          1          3    male  73.0       793    1.0       0      1.0\n",
        "3          1          1    male  74.0      5310    0.0       1      0.0\n",
        "4          0          3  female  74.0       805    1.0       0      1.0"
       ]
@@ -1668,7 +1668,7 @@
        "      <td>male</td>\n",
        "      <td>75.0</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.029940</td>\n",
@@ -1680,7 +1680,7 @@
        "      <td>male</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -1728,7 +1728,7 @@
        "      <td>male</td>\n",
        "      <td>71.0</td>\n",
        "      <td>1525</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.856287</td>\n",
@@ -1776,7 +1776,7 @@
        "      <td>male</td>\n",
        "      <td>76.0</td>\n",
        "      <td>16487</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.035928</td>\n",
@@ -1789,16 +1789,16 @@
       "text/plain": [
        "     Longevity  Education     Sex   Age  Activity  Sport  Family  IsAlone  \\\n",
        "0            0          3  female  73.0       725    1.0       1      0.0   \n",
-       "1            1          1    male  75.0      7128    1.0       1      0.0   \n",
-       "2            1          3    male  73.0       793    0.0       0      1.0   \n",
+       "1            1          1    male  75.0      7128    0.0       1      0.0   \n",
+       "2            1          3    male  73.0       793    1.0       0      1.0   \n",
        "3            1          1    male  74.0      5310    0.0       1      0.0   \n",
        "4            0          3  female  74.0       805    1.0       0      1.0   \n",
        "..         ...        ...     ...   ...       ...    ...     ...      ...   \n",
-       "852          0          3    male  71.0      1525    1.0       2      0.0   \n",
+       "852          0          3    male  71.0      1525    0.0       2      0.0   \n",
        "853          1          1    male  72.0      3940    1.0       1      0.0   \n",
        "854          0          2    male  76.0      2600    1.0       1      0.0   \n",
        "855          1          3    male  72.0       935    1.0       1      0.0   \n",
-       "856          1          1    male  76.0     16487    0.0       2      0.0   \n",
+       "856          1          1    male  76.0     16487    1.0       2      0.0   \n",
        "\n",
        "     SocialStatus  \n",
        "0        0.892216  \n",
@@ -1965,7 +1965,7 @@
        "      <td>1.0</td>\n",
        "      <td>75.0</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.029940</td>\n",
@@ -1978,7 +1978,7 @@
        "      <td>1.0</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2017,8 +2017,8 @@
       "text/plain": [
        "   Longevity  Education  Sex   Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  73.0       725    1.0       1      0.0   \n",
-       "1          1          1  1.0  75.0      7128    1.0       1      0.0   \n",
-       "2          1          3  1.0  73.0       793    0.0       0      1.0   \n",
+       "1          1          1  1.0  75.0      7128    0.0       1      0.0   \n",
+       "2          1          3  1.0  73.0       793    1.0       0      1.0   \n",
        "3          1          1  1.0  74.0      5310    0.0       1      0.0   \n",
        "4          0          3  0.0  74.0       805    1.0       0      1.0   \n",
        "\n",
@@ -2059,16 +2059,16 @@
      "text": [
       "     Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
       "0            0          3  0.0  0.3       725    1.0       1      0.0   \n",
-      "1            1          1  1.0  0.5      7128    1.0       1      0.0   \n",
-      "2            1          3  1.0  0.3       793    0.0       0      1.0   \n",
+      "1            1          1  1.0  0.5      7128    0.0       1      0.0   \n",
+      "2            1          3  1.0  0.3       793    1.0       0      1.0   \n",
       "3            1          1  1.0  0.4      5310    0.0       1      0.0   \n",
       "4            0          3  0.0  0.4       805    1.0       0      1.0   \n",
       "..         ...        ...  ...  ...       ...    ...     ...      ...   \n",
-      "852          0          3  1.0  0.1      1525    1.0       2      0.0   \n",
+      "852          0          3  1.0  0.1      1525    0.0       2      0.0   \n",
       "853          1          1  1.0  0.2      3940    1.0       1      0.0   \n",
       "854          0          2  1.0  0.6      2600    1.0       1      0.0   \n",
       "855          1          3  1.0  0.2       935    1.0       1      0.0   \n",
-      "856          1          1  1.0  0.6     16487    0.0       2      0.0   \n",
+      "856          1          1  1.0  0.6     16487    1.0       2      0.0   \n",
       "\n",
       "     SocialStatus  AgeRanges  \n",
       "0        0.892216        3.0  \n",
@@ -2140,7 +2140,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>7128</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.029940</td>\n",
@@ -2153,7 +2153,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2192,8 +2192,8 @@
       "text/plain": [
        "   Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  0.3       725    1.0       1      0.0   \n",
-       "1          1          1  1.0  0.5      7128    1.0       1      0.0   \n",
-       "2          1          3  1.0  0.3       793    0.0       0      1.0   \n",
+       "1          1          1  1.0  0.5      7128    0.0       1      0.0   \n",
+       "2          1          3  1.0  0.3       793    1.0       0      1.0   \n",
        "3          1          1  1.0  0.4      5310    0.0       1      0.0   \n",
        "4          0          3  0.0  0.4       805    1.0       0      1.0   \n",
        "\n",
@@ -2291,7 +2291,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.139129</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.029940</td>\n",
@@ -2304,7 +2304,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0.015478</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2343,8 +2343,8 @@
       "text/plain": [
        "   Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  0.3  0.014151    1.0       1      0.0   \n",
-       "1          1          1  1.0  0.5  0.139129    1.0       1      0.0   \n",
-       "2          1          3  1.0  0.3  0.015478    0.0       0      1.0   \n",
+       "1          1          1  1.0  0.5  0.139129    0.0       1      0.0   \n",
+       "2          1          3  1.0  0.3  0.015478    1.0       0      1.0   \n",
        "3          1          1  1.0  0.4  0.103644    0.0       1      0.0   \n",
        "4          0          3  0.0  0.4  0.015713    1.0       0      1.0   \n",
        "\n",
@@ -2388,16 +2388,9 @@
    "outputs": [],
    "source": [
     "#Сохранение исправленных датасетов в отдельные файлы\n",
-    "# train_df.to_csv('train_df_done.csv')\n",
-    "# test_df.to_csv('test_df_done.csv')"
+    "train_df.to_csv('train_df_done.csv' ,index = False )\n",
+    "test_df.to_csv('test_df_done.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
