--- a/day2_preprocessing/day2_preprocessing.ipynb
+++ b/day2_preprocessing/day2_preprocessing.ipynb
@@ -609,8 +609,8 @@
       "70         24\n",
       "78         19\n",
       "79          6\n",
-      "#ЗНАЧ!      1\n",
       "80          1\n",
+      "#ЗНАЧ!      1\n",
       "Name: Age, dtype: int64\n",
       "Pet\n",
       "0    582\n",
@@ -647,40 +647,40 @@
       "13              17\n",
       "19              16\n",
       "25              14\n",
+      "39              13\n",
       "28              13\n",
       "14              13\n",
-      "39              13\n",
       "16              10\n",
-      "41               9\n",
       "75               9\n",
-      "38               9\n",
       "22               9\n",
+      "41               9\n",
+      "38               9\n",
       "66               6\n",
       "12               5\n",
-      "27               4\n",
-      "54               4\n",
-      "65               4\n",
-      "32               4\n",
       "20               4\n",
+      "65               4\n",
       "LINE             4\n",
+      "32               4\n",
       "57               4\n",
+      "54               4\n",
+      "27               4\n",
       "70               3\n",
-      "S.O./P.P. 3      2\n",
-      "84               2\n",
-      "18               2\n",
-      "95               2\n",
-      "45               2\n",
       "48               2\n",
+      "95               2\n",
+      "84               2\n",
+      "45               2\n",
+      "S.O./P.P. 3      2\n",
+      "18               2\n",
       "43               1\n",
-      "30               1\n",
-      "10               1\n",
       "40               1\n",
-      "55               1\n",
-      "62               1\n",
-      "92               1\n",
-      "85               1\n",
-      "15               1\n",
       "72               1\n",
+      "15               1\n",
+      "10               1\n",
+      "92               1\n",
+      "30               1\n",
+      "62               1\n",
+      "55               1\n",
+      "85               1\n",
       "69               1\n",
       "Name: Region, dtype: int64\n",
       "Activity\n",
@@ -1110,8 +1110,8 @@
       "70         24\n",
       "78         19\n",
       "79          6\n",
-      "#ЗНАЧ!      1\n",
       "80          1\n",
+      "#ЗНАЧ!      1\n",
       "Name: Age, dtype: int64\n"
      ]
     },
@@ -1193,8 +1193,8 @@
     {
      "data": {
       "text/plain": [
-       "1.0    554\n",
-       "0.0    303\n",
+       "1.0    572\n",
+       "0.0    285\n",
        "Name: Sport, dtype: int64"
       ]
      },
@@ -1293,7 +1293,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1327,7 +1327,7 @@
        "   Id  Longevity  Education     Sex   Age  Pet  Children  Activity  Sport\n",
        "0   1          0          3  female  73.0    1         0       725    1.0\n",
        "1   2          1          1    male  75.0    1         0      7128    1.0\n",
-       "2   3          1          3    male  73.0    0         0       793    0.0\n",
+       "2   3          1          3    male  73.0    0         0       793    1.0\n",
        "3   4          1          1    male  74.0    1         0      5310    0.0\n",
        "4   5          0          3  female  74.0    0         0       805    1.0"
       ]
@@ -1412,7 +1412,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1444,7 +1444,7 @@
        "   Longevity  Education     Sex   Age  Pet  Children  Activity  Sport\n",
        "0          0          3  female  73.0    1         0       725    1.0\n",
        "1          1          1    male  75.0    1         0      7128    1.0\n",
-       "2          1          3    male  73.0    0         0       793    0.0\n",
+       "2          1          3    male  73.0    0         0       793    1.0\n",
        "3          1          1    male  74.0    1         0      5310    0.0\n",
        "4          0          3  female  74.0    0         0       805    1.0"
       ]
@@ -1527,7 +1527,7 @@
        "      <td>male</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -1561,7 +1561,7 @@
        "   Longevity  Education     Sex   Age  Activity  Sport  Family  IsAlone\n",
        "0          0          3  female  73.0       725    1.0       1      0.0\n",
        "1          1          1    male  75.0      7128    1.0       1      0.0\n",
-       "2          1          3    male  73.0       793    0.0       0      1.0\n",
+       "2          1          3    male  73.0       793    1.0       0      1.0\n",
        "3          1          1    male  74.0      5310    0.0       1      0.0\n",
        "4          0          3  female  74.0       805    1.0       0      1.0"
       ]
@@ -1680,7 +1680,7 @@
        "      <td>male</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -1764,7 +1764,7 @@
        "      <td>male</td>\n",
        "      <td>72.0</td>\n",
        "      <td>935</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.874251</td>\n",
@@ -1790,14 +1790,14 @@
        "     Longevity  Education     Sex   Age  Activity  Sport  Family  IsAlone  \\\n",
        "0            0          3  female  73.0       725    1.0       1      0.0   \n",
        "1            1          1    male  75.0      7128    1.0       1      0.0   \n",
-       "2            1          3    male  73.0       793    0.0       0      1.0   \n",
+       "2            1          3    male  73.0       793    1.0       0      1.0   \n",
        "3            1          1    male  74.0      5310    0.0       1      0.0   \n",
        "4            0          3  female  74.0       805    1.0       0      1.0   \n",
        "..         ...        ...     ...   ...       ...    ...     ...      ...   \n",
        "852          0          3    male  71.0      1525    1.0       2      0.0   \n",
        "853          1          1    male  72.0      3940    1.0       1      0.0   \n",
        "854          0          2    male  76.0      2600    1.0       1      0.0   \n",
-       "855          1          3    male  72.0       935    0.0       1      0.0   \n",
+       "855          1          3    male  72.0       935    1.0       1      0.0   \n",
        "856          1          1    male  76.0     16487    1.0       2      0.0   \n",
        "\n",
        "     SocialStatus  \n",
@@ -1867,6 +1867,7 @@
       "2.0     54\n",
       "5.0     30\n",
       "1.0      6\n",
+      "6.0      1\n",
       "Name: Age, dtype: int64\n"
      ]
     }
@@ -1890,7 +1891,7 @@
     "        return 4\n",
     "    if age in range(77,79):\n",
     "        return 5\n",
-    "    if age in range(79,80):\n",
+    "    if age in range(79,81):\n",
     "        return 6\n",
     "    if age > 80:\n",
     "        return 7\n",
@@ -1978,7 +1979,7 @@
        "      <td>1.0</td>\n",
        "      <td>73.0</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2018,7 +2019,7 @@
        "   Longevity  Education  Sex   Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  73.0       725    1.0       1      0.0   \n",
        "1          1          1  1.0  75.0      7128    1.0       1      0.0   \n",
-       "2          1          3  1.0  73.0       793    0.0       0      1.0   \n",
+       "2          1          3  1.0  73.0       793    1.0       0      1.0   \n",
        "3          1          1  1.0  74.0      5310    0.0       1      0.0   \n",
        "4          0          3  0.0  74.0       805    1.0       0      1.0   \n",
        "\n",
@@ -2060,14 +2061,14 @@
       "     Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
       "0            0          3  0.0  0.3       725    1.0       1      0.0   \n",
       "1            1          1  1.0  0.5      7128    1.0       1      0.0   \n",
-      "2            1          3  1.0  0.3       793    0.0       0      1.0   \n",
+      "2            1          3  1.0  0.3       793    1.0       0      1.0   \n",
       "3            1          1  1.0  0.4      5310    0.0       1      0.0   \n",
       "4            0          3  0.0  0.4       805    1.0       0      1.0   \n",
       "..         ...        ...  ...  ...       ...    ...     ...      ...   \n",
       "852          0          3  1.0  0.1      1525    1.0       2      0.0   \n",
       "853          1          1  1.0  0.2      3940    1.0       1      0.0   \n",
       "854          0          2  1.0  0.6      2600    1.0       1      0.0   \n",
-      "855          1          3  1.0  0.2       935    0.0       1      0.0   \n",
+      "855          1          3  1.0  0.2       935    1.0       1      0.0   \n",
       "856          1          1  1.0  0.6     16487    1.0       2      0.0   \n",
       "\n",
       "     SocialStatus  AgeRanges  \n",
@@ -2153,7 +2154,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2193,7 +2194,7 @@
        "   Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  0.3       725    1.0       1      0.0   \n",
        "1          1          1  1.0  0.5      7128    1.0       1      0.0   \n",
-       "2          1          3  1.0  0.3       793    0.0       0      1.0   \n",
+       "2          1          3  1.0  0.3       793    1.0       0      1.0   \n",
        "3          1          1  1.0  0.4      5310    0.0       1      0.0   \n",
        "4          0          3  0.0  0.4       805    1.0       0      1.0   \n",
        "\n",
@@ -2304,7 +2305,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0.015478</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.892216</td>\n",
@@ -2344,7 +2345,7 @@
        "   Longevity  Education  Sex  Age  Activity  Sport  Family  IsAlone  \\\n",
        "0          0          3  0.0  0.3  0.014151    1.0       1      0.0   \n",
        "1          1          1  1.0  0.5  0.139129    1.0       1      0.0   \n",
-       "2          1          3  1.0  0.3  0.015478    0.0       0      1.0   \n",
+       "2          1          3  1.0  0.3  0.015478    1.0       0      1.0   \n",
        "3          1          1  1.0  0.4  0.103644    0.0       1      0.0   \n",
        "4          0          3  0.0  0.4  0.015713    1.0       0      1.0   \n",
        "\n",
@@ -2387,56 +2388,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_float32(string, data_frame):\n",
-    "    col = data_frame[string].copy()\n",
-    "    col = col.map(lambda v: v).astype(np.float32)\n",
-    "    data_frame[string] = col\n",
-    "    return data_frame\n",
+    "# def to_float32(string, data_frame):\n",
+    "#     col = data_frame[string].copy()\n",
+    "#     col = col.map(lambda v: v).astype(np.float32)\n",
+    "#     data_frame[string] = col\n",
+    "#     return data_frame\n",
     "    \n",
-    "train_df = to_float32('Longevity', train_df)\n",
-    "train_df = to_float32('Education', train_df)\n",
-    "train_df = to_float32('Family', train_df)\n",
-    "train_df = to_float32('Sex', train_df)\n",
+    "# train_df = to_float32('Longevity', train_df)\n",
+    "# train_df = to_float32('Education', train_df)\n",
+    "# train_df = to_float32('Family', train_df)\n",
+    "# train_df = to_float32('Sex', train_df)\n",
     "\n",
-    "test_df = to_float32('Longevity', test_df)\n",
-    "test_df = to_float32('Education', test_df)\n",
-    "test_df = to_float32('Family', test_df)\n",
-    "test_df = to_float32('Sex', test_df)\n"
+    "# test_df = to_float32('Longevity', test_df)\n",
+    "# test_df = to_float32('Education', test_df)\n",
+    "# test_df = to_float32('Family', test_df)\n",
+    "# test_df = to_float32('Sex', test_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 857 entries, 0 to 856\n",
-      "Data columns (total 10 columns):\n",
-      "Longevity       857 non-null float32\n",
-      "Education       857 non-null float32\n",
-      "Sex             857 non-null float32\n",
-      "Age             857 non-null float32\n",
-      "Activity        857 non-null float32\n",
-      "Sport           857 non-null float32\n",
-      "Family          857 non-null float32\n",
-      "IsAlone         857 non-null float32\n",
-      "SocialStatus    857 non-null float32\n",
-      "AgeRanges       856 non-null float32\n",
-      "dtypes: float32(10)\n",
-      "memory usage: 33.6 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Сохранение исправленных датасетов в отдельные файлы\n",
-    "#train_df.to_csv('train_df_done.csv' ,index = False )\n",
-    "#test_df.to_csv('test_df_done.csv', index = False)\n",
-    "\n",
-    "train_df.info()"
+    "train_df.to_csv('train_df_done.csv' ,index = False )\n",
+    "test_df.to_csv('test_df_done.csv', index = False)\n"
    ]
   },
   {
