--- a/day3_learning/decision_tree/decision_tree.ipynb
+++ b/day3_learning/decision_tree/decision_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
       "SocialStatus    452 non-null float32\n",
       "AgeRanges       452 non-null float32\n",
       "dtypes: float32(10)\n",
-      "memory usage: 17.8 KB\n"
+      "memory usage: 17.7 KB\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,21 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "                       max_features=None, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=None, splitter='best')"
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,21 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "                       max_features=None, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=None, splitter='best')"
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7906976744186046"
+       "0.7848837209302325"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,22 +169,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Отрисовка "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_graphviz(tree, out_file='tree_pic.dot', feature_names = x.columns, filled = True)"
+    "#export_graphviz(tree, out_file='tree_pic.dot', feature_names = x.columns, filled = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: 1: dot: not found\r\n"
+     ]
+    }
+   ],
    "source": [
-    "! dot -Tpng tree_pic.dot -o tree_pic.png"
+    "#! dot -Tpng tree_pic.dot -o tree_pic.png"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -203,14 +225,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
