add stochastic gradient

--- a/day3_learning/stochastic_gradient/stochastic_gradient.ipynb
+++ b/day3_learning/stochastic_gradient/stochastic_gradient.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import model from sklearn\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "#import other libs\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.tree import export_graphviz"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -178,7 +179,8 @@
     "y_test = test_df['Longevity'].copy()\n",
     "x_test = test_df.drop(['Longevity'], axis = 1)\n",
     "\n",
-    "x_test.head()"
+    "x_test.head()\n",
+    "    "
    ]
   },
   {
@@ -189,12 +191,12 @@
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "            max_features=None, max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
-       "            splitter='best')"
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "       early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "       l1_ratio=0.15, learning_rate='optimal', loss='hinge', max_iter=1000,\n",
+       "       n_iter=None, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "       power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
+       "       validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
      "execution_count": 3,
@@ -203,8 +205,8 @@
     }
    ],
    "source": [
-    "tree = DecisionTreeClassifier(max_depth = 3)\n",
-    "tree"
+    "model = SGDClassifier(max_iter = 1000, tol = 1e-3)\n",
+    "model"
    ]
   },
   {
@@ -215,12 +217,12 @@
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=3,\n",
-       "            max_features=None, max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
-       "            splitter='best')"
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "       early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "       l1_ratio=0.15, learning_rate='optimal', loss='hinge', max_iter=1000,\n",
+       "       n_iter=None, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "       power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
+       "       validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
      "execution_count": 4,
@@ -229,7 +231,7 @@
     }
    ],
    "source": [
-    "tree.fit(x_train, y_train)"
+    "model.fit(x_train, y_train)"
    ]
   },
   {
@@ -240,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9203539823008849"
+       "0.9004424778761062"
       ]
      },
      "execution_count": 5,
@@ -249,41 +251,8 @@
     }
    ],
    "source": [
-    "tree.score(x_test, y_test)"
+    "model.score(x_test, y_test)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Отрисовка полученного дерева"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export_graphviz(tree, out_file='tree_pic.dot', feature_names = x.columns, filled = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#чтобы заработал код ниже - надо поставить соотв. утилиту в ОС\n",
-    "#! dot -Tpng tree_pic.dot -o tree_pic.png"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
