--- a/day3_learning/decision_tree/decision_tree.ipynb
+++ b/day3_learning/decision_tree/decision_tree.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6</td>\n",
@@ -64,7 +64,7 @@
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
@@ -76,7 +76,7 @@
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.3</td>\n",
@@ -88,7 +88,7 @@
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.5</td>\n",
@@ -100,7 +100,7 @@
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.3</td>\n",
@@ -131,7 +131,7 @@
        "4        3.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,8 +259,8 @@
    "outputs": [],
    "source": [
     "#import модели\n",
-    "import pickle\n",
-    "pickle.dump(logreg, open(\"./../../../deploy/linearmodel.pkl\", \"wb\"))"
+    "#import pickle\n",
+    "#pickle.dump(logreg, open(\"./../../../deploy/linearmodel.pkl\", \"wb\"))"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
