--- a/main_project/main_project.ipynb
+++ b/main_project/main_project.ipynb
@@ -191,6 +191,7 @@
     "#test.csv не содержит диагноза, поэтому вызывается except и в df в итоге ничего не попадвает\n",
     "\n",
     "df_train_lables = df_train_lables.drop(['Unnamed: 0'], axis = 1)\n",
+    "#тут test формируется не верно, надо поправить\n",
     "df_test_lables = df_test_lables.drop(['Unnamed: 0'], axis = 1)\n",
     "df_train_lables"
    ]
@@ -203,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f900abb5910>"
+       "<matplotlib.image.AxesImage at 0x7fe4a63d88d0>"
       ]
      },
      "execution_count": 3,
@@ -261,12 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_x = np.load('train_x.npy')\n",
-    "train_x = np.reshape(train_x, (1,3112, 512, 512))"
+    "#train_x = np.load('train_x.npy')\n",
+    "# 3112 картинок по 512 на 512 пикселей, по 1 числу на каждый пиксель (черное-белое изображение) \n",
+    "#так нужно для обучения\n",
+    "train_x = np.reshape(train_x, (3112, 512, 512, 1))"
    ]
   },
   {
@@ -282,14 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential([\n",
-    "    Conv2D(64, kernel_size=3, activation='relu', input_shape=(512,512,1)),\n",
-    "    MaxPool2D(),\n",
-    "    #Conv2D(128, kernel_size=3, activation='relu'),\n",
+    "    Conv2D(64, kernel_size=3, padding = \"same\", activation='relu', input_shape=(512,512,1)),\n",
+    "    MaxPool2D((4,4), strides = 4),\n",
+    "    Conv2D(64, kernel_size = 5, padding = \"same\", activation = \"relu\"),\n",
+    "    MaxPool2D((4,4), strides = 4),\n",
     "    Flatten(),\n",
     "    Dense(128, activation = 'relu'),\n",
     "    Dense(5, activation = 'softmax')\n",
@@ -298,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +315,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 3112 samples\n",
+      "Epoch 1/3\n",
+      "3112/3112 [==============================] - 1302s 419ms/sample - loss: 1.2239 - accuracy: 0.5585\n",
+      "Epoch 2/3\n",
+      "2208/3112 [====================>.........] - ETA: 6:08 - loss: 0.9897 - accuracy: 0.6436"
+     ]
+    }
+   ],
    "source": [
     "model.fit(train_x, train_y, epochs = 3)"
    ]
